hlvm/test/invalid/loop.hlx
<?xml version="1.0" encoding="UTF-8"?>
<hlvm xmlns="http://hlvm.org/src/hlvm/Reader/XML/HLVM.rng" pubid="http://hlvm.org/src/hlvm/test/invalid/loop.hlx">
  <bundle id="loop">
    <constant id="0" type="s32">
      <dec>0</dec>
    </constant>
    <constant id="1" type="s32">
      <dec>1</dec>
    </constant>
    <program id="loop">
      <block>
        <!-- Non-boolean control expressions -->
        <loop>
          <ref id="0"/>
          <ref id="1"/>
          <ref id="0"/>
        </loop>
        <!-- Block without result where one expected -->
        <!-- Void function result for non-void function -->
        <result>
          <loop>
            <ne>
              <ref id="1"/>
              <ref id="0"/>
            </ne>
            <block><ref id="0"/></block>
            <eq>
              <ref id="1"/>
              <ref id="0"/>
            </eq>
          </loop>
        </result>
        <result>
          <ref id="0"/>
        </result>
        <ret/>
      </block>
    </program>
  </bundle>
</hlvm>
